Simpler rule for simple search visibility, fixed selected category style

--- a/app/assets/stylesheets/dhaka.css.scss
+++ b/app/assets/stylesheets/dhaka.css.scss
@@ -149,11 +149,7 @@ body {
       &:hover { background-color: darken($yellow, 20%); }
     }
 
-    &.active a {
-      background-color: darken($yellow, 10%);
-    }
-
-    &.selected a {
+    &.active a, &.selected a {
       font-weight: bold;
       color: white !important;
       text-decoration: none;
